--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-numpy
-pandas
-librosa
-scipy
-scikit-learn
-soundfile
-audio-recorder-streamlit
+streamlit==1.40.1
+numpy==1.26.4
+pandas==2.2.3
+librosa==0.10.2.post1
+scipy==1.13.1
+scikit-learn==1.5.2
+soundfile==0.12.1
+audio-recorder-streamlit==0.0.8
